# Veda

./: .gitignore  LICENSE  README.md  hello.veda  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  cookbook.md  errors.md  progress.md  roadmap.md  stdlib.md  syntax.md  tour.md
examples/: conditions.veda  fibonacci.veda  functions.veda  hello.veda  loops.veda  variables.veda
src_c/: lexer.c
tests/: conftest.py  test_checker.py  test_fuzz.py  test_golden_errors.py  test_interpreter.py  test_lexer.py  test_parser.py
tools/lsp/: README.md  veda_lsp.py
tools/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  package.ps1
tools/vscode/snippets/: veda.json
tools/vscode/syntaxes/: veda.tmLanguage.json
tools/vscode/themes/: veda-icon-theme.json
veda/veda/: ast_nodes.py  builtins.py  checker.py  cli.py  environment.py  errors.py  formatter.py  interpreter.py  lexer.py  linter.py  options.py  parser.py  repl.py  token_types.py
